Corrected mistakes in MC simulation