@@ -355,12 +355,12 @@ public class ArtificialPlayer extends AbstractRemotePlayer implements AutoClosea
             final int batchStart = start;
             final int batchEnd = Math.min(start + batchSize, numberOfGames);
             executor.submit(() -> {
-                int pliesCollected = numberOfPliesWonByOwnTeam;
                 List<Card>[] hands = new List[4];
                 int localReward = 0;
                 ThreadLocalRandom localRand = ThreadLocalRandom.current();  // Thread-safe random
 
                 for (int game = batchStart; game < batchEnd; game++) {
+                    int pliesCollected = numberOfPliesWonByOwnTeam;
                     hands[0] = new ArrayList<>(hand);
                     int i = 1;
                     for (var h : gameView.getRandomHands()) {
@@ -371,12 +371,10 @@ public class ArtificialPlayer extends AbstractRemotePlayer implements AutoClosea
                     try {
                         plie.playCard(move, this, hands[0]);
                     } catch (BrokenRuleException e) {
-                        e.printStackTrace();
-                        continue;  // Skip bad sim
+                        throw new RuntimeException("Broken rule in MC simulation: " + e.getBrokenRule());
                     }
                     hands[0].remove(move);
                     int gameScore = 0;
-                    PlayerPosition plieWinnerPosition;
                     do {
                         while (plie.getSize() < 4) {
                             var currentPosition = startPosition.add(plie.getSize());
@@ -389,20 +387,20 @@ public class ArtificialPlayer extends AbstractRemotePlayer implements AutoClosea
                             }
                             Card randomMove;
                             if (validMoves.size() == 1) {
-                                randomMove = validMoves.get(0);
+                                randomMove = validMoves.getFirst();
                             } else {
                                 randomMove = validMoves.get(localRand.nextInt(validMoves.size()));
                             }
                             try {
                                 plie.playCard(randomMove, currentPosition == PlayerPosition.SELF ? this : playersByPosition.get(currentPosition), hands[currentPosition.getCode()]);
                             } catch (BrokenRuleException e) {
-                                e.printStackTrace();
-                                break;  // Skip bad trick
+                                throw new RuntimeException("Broken rule in MC simulation: " + e.getBrokenRule());
                             }
                             hands[currentPosition.getCode()].remove(randomMove);
                         }
-                        plieWinnerPosition = positionsByIds.get(plie.getOwner().getId());
-                        if (plieWinnerPosition.ourTeam()) {
+                        // the trick's owner gets to start the next trick
+                        startPosition = positionsByIds.get(plie.getOwner().getId());
+                        if (startPosition.ourTeam()) {
                             gameScore += plie.getScore();
                             pliesCollected++;
                         } else {
@@ -411,7 +409,7 @@ public class ArtificialPlayer extends AbstractRemotePlayer implements AutoClosea
                         plie = new Plie();
                     } while (!hands[0].isEmpty());
                     int cinqDeDer = Card.atout == Card.COLOR_SPADE ? 10 : 5;
-                    gameScore += plieWinnerPosition.ourTeam() ? cinqDeDer : 0;
+                    gameScore += startPosition.ourTeam() ? cinqDeDer : -cinqDeDer;
                     int match = Card.atout == Card.COLOR_SPADE ? 200 : 100;
                     if (pliesCollected == 9) {
                         gameScore += match;
@@ -452,11 +450,10 @@ public class ArtificialPlayer extends AbstractRemotePlayer implements AutoClosea
             try {
                 plie.playCard(move, this, hands[0]);
             } catch (BrokenRuleException e) {
-                e.printStackTrace();
+                throw new RuntimeException("Broken rule in MC simulation: " + e.getBrokenRule());
             }
             hands[0].remove(move);
             int gameScore = 0;
-            PlayerPosition plieWinnerPosition;
             do {
                 while (plie.getSize() < 4) {
                     var currentPosition = startPosition.add(plie.getSize());
@@ -467,19 +464,20 @@ public class ArtificialPlayer extends AbstractRemotePlayer implements AutoClosea
                     }
                     Card randomMove;
                     if (validMoves.size() == 1) {
-                        randomMove = validMoves.get(0);
+                        randomMove = validMoves.getFirst();
                     } else {
                         randomMove = validMoves.get(rand.nextInt(validMoves.size()));
                     }
                     try {
                         plie.playCard(randomMove, currentPosition == PlayerPosition.SELF ? this : playersByPosition.get(currentPosition), hands[currentPosition.getCode()]);
                     } catch (BrokenRuleException e) {
-                        e.printStackTrace();
+                        throw new RuntimeException("Broken rule in MC simulation: " + e.getBrokenRule());
                     }
                     hands[currentPosition.getCode()].remove(randomMove);
                 }
-                plieWinnerPosition = positionsByIds.get(plie.getOwner().getId());
-                if (plieWinnerPosition.ourTeam()) {
+                // the trick's owner gets to start the next trick
+                startPosition = positionsByIds.get(plie.getOwner().getId());
+                if (startPosition.ourTeam()) {
                     gameScore += plie.getScore();
                     pliesCollected++;
                 } else {
@@ -488,7 +486,7 @@ public class ArtificialPlayer extends AbstractRemotePlayer implements AutoClosea
                 plie = new Plie();
             } while (!hands[0].isEmpty());
             int cinqDeDer = Card.atout == Card.COLOR_SPADE ? 10 : 5;
-            gameScore += plieWinnerPosition.ourTeam() ? cinqDeDer : 0;
+            gameScore += startPosition.ourTeam() ? cinqDeDer : -cinqDeDer;
             int match = Card.atout == Card.COLOR_SPADE ? 200 : 100;
             if (pliesCollected == 9) {
                 gameScore += match;
@@ -541,7 +539,7 @@ public class ArtificialPlayer extends AbstractRemotePlayer implements AutoClosea
                 bestAtout = atout;
             }
         }
-        return bestScore < 0 && canPass ? Card.COLOR_NONE : bestAtout;
+        return bestScore < 80 && canPass ? Card.COLOR_NONE : bestAtout;
     }
 
     void waitSec(float seconds) {
